# iscore-addon-shaders

./: CMakeLists.txt  README.md  iscore_addon_shader.cpp  iscore_addon_shader.hpp  score_addon_shader.cpp  score_addon_shader.hpp
Shader/: EditShader.cpp  EditShader.hpp  ShaderCommandFactory.hpp  ShaderExecutor.cpp  ShaderExecutor.hpp  ShaderFactory.hpp  ShaderInspector.cpp  ShaderInspector.hpp  ShaderLayerFactory.hpp  ShaderLocalTree.cpp  ShaderLocalTree.hpp  ShaderMetadata.hpp  ShaderModel.cpp  ShaderModel.hpp  ShaderPresenter.cpp  ShaderPresenter.hpp  ShaderView.cpp  ShaderView.hpp
